--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -15,7 +15,7 @@ jobs:
       mysql:
         image: mysql:8.0.33
         env:
-          MYSQL_ROOT_PASSWORD: Admin@123
+          MYSQL_ROOT_PASSWORD: root@123
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
